packages/wasm/ballerina-lang-go/parser/testdata/tokens/record/negative/duplicate-key-negative.token
(type 4 0x00 ())
(ident, "Song" 4 0x00 ())
(record 6 0x00 ())
({| 2 0x00 ())
(string 6 0x00 ())
(ident, "name" 4 0x00 ())
(; 1 0x00 ())
(int 3 0x00 ())
(ident, "length" 6 0x00 ())
(; 1 0x00 ())
(|} 2 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "duplicateKeyTest1" 17 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "Song" 4 0x00 ())
(ident, "_" 1 0x00 ())
(= 1 0x00 ())
({ 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""hello"" 7 0x00 ())
(, 1 0x00 ())
(ident, "length" 6 0x00 ())
(: 1 0x00 ())
(int, "1" 1 0x00 ())
(, 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""hello"" 7 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "duplicateKeyTest2" 17 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "Song" 4 0x00 ())
(ident, "hi" 2 0x00 ())
(; 1 0x00 ())
(ident, "hi" 2 0x00 ())
(= 1 0x00 ())
({ 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""hi"" 4 0x00 ())
(, 1 0x00 ())
(ident, "length" 6 0x00 ())
(: 1 0x00 ())
(int, "2" 1 0x00 ())
(, 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""hi"" 4 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "duplicateKeyTest3" 17 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "Song" 4 0x00 ())
(ident, "_" 1 0x00 ())
(= 1 0x00 ())
({ 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""hola"" 6 0x00 ())
(, 1 0x00 ())
(ident, "length" 6 0x00 ())
(: 1 0x00 ())
(int, "1" 1 0x00 ())
(, 1 0x00 ())
(string, ""name"" 6 0x00 ())
(: 1 0x00 ())
(string, ""hola"" 6 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
